# ComfyUI-SendToDiscord

./: .gitignore  LICENSE  README.md  __init__.py  config.ini  config.ini.example  config.ini.template  pyproject.toml  requirements.txt  send_to_discord.py
.github/workflows/: publish_action.yml
examples/: workflow.json
