[project]
name = "comfyui-sendtodiscord"
description = "ComfyUI-SendToDiscord is a custom node for ComfyUI that simplifies sending preview images to Discord via webhooks. It supports both single-image uploads and batch mode, making it an efficient tool for sharing your generated images directly with your Discord server."
version = "1.2.2"
license = {file = "LICENSE"}
dependencies = ["Pillow>=9.5.0", "requests>=2.28.2", "numpy>=1.23.5"]

[project.urls]
Repository = "https://github.com/gmorks/ComfyUI-SendToDiscord"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "gmorks"
DisplayName = "ComfyUI-SendToDiscord"
Icon = "https://raw.githubusercontent.com/gmorks/ComfyUI-SendToDiscord/refs/heads/main/media/icon.svg"
